# programming

./: coupon_code_validator.py  department_top_three_salaries.py  largest_magic_square.py  minimum_difference.py  minimum_time_visiting_all_points.py  palindrome_number.py
c/: breathing_circles.c  hello_world.c  orbit.c  wind_plot
fun1/: generate_car  generate_car.cpp  package-lock.json  wind_tunnel.c
python/: deck_of_cards.py  department_top_three_salaries.py  largest_magic_square.py  minimum_abs_difference.py  minimum_bitwise_array.py  minimum_pair_removal_to_sort_array_1.py  palindrome_number.py  plus_one.py  pyproject.toml
pytorch-learning/: .gitignore  README.md  config.py  main.py  notes.md  predict.py  pyproject.toml  train.py
pytorch-learning/data/: __init__.py  nba_data.py
pytorch-learning/models/: __init__.py  player_predictor.py
